--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ endorsed.classpath=\
 excludes=
 file.reference.javax.mail.jar=web/WEB-INF/lib/javax.mail.jar
 file.reference.jdom-2.0.6.jar=web/WEB-INF/lib/jdom-2.0.6.jar
+file.reference.jstl-1.2.jar=C:\\Users\\V\u00e9ronne\\Desktop\\Semestre 2\\G\u00e9nie Logiciel\\Projet\\jstl-1.2.jar
 file.reference.log4j-1.2.17.jar=web/WEB-INF/lib/log4j-1.2.17.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=web/WEB-INF/lib/mysql-connector-java-5.1.23-bin.jar
 includes=**
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.jdom-2.0.6.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.jstl-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
